plugin
	replaced some api code (specifically api that was reading files inside jar) that was broken when used inside jar with new code that works inside jar

shared between languages
	none

SQF
	none

Header
    none