@@ -28,8 +28,8 @@
 		<lang.braceMatcher language="Arma.SQF" implementationClass="com.kaylerrenslow.a3plugin.lang.sqf.editor.SQFBraceMatcher" />
 		<lang.foldingBuilder language="Arma.SQF" implementationClass="com.kaylerrenslow.a3plugin.lang.sqf.editor.SQFFoldingBuilder" />
 		<!--<codeInsight.parameterInfo language="Arma.SQF" implementationClass="com.kaylerrenslow.a3plugin.lang.sqf.editor.SQFParameterInfo" />-->
-		<!--<renamePsiElementProcessor implementation="com.kaylerrenslow.a3plugin.lang.sqf.contributors.SQFPsiElementProcessor" />-->
 		<renameHandler implementation="com.kaylerrenslow.a3plugin.lang.sqf.contributors.SQFRenameHandler"/>
+		<!--<lang.quoteHandler language="Arma.SQF" implementationClass="com.kaylerrenslow.a3plugin.lang.sqf.contributors.SQFQuoteHandler" />-->
 
 		<!-- Header Language -->
 		<fileTypeFactory implementation="com.kaylerrenslow.a3plugin.lang.header.HeaderFileTypeFactory"/>
@@ -69,9 +69,9 @@
 	<project-components></project-components>
 
 	<actions>
-		<group id="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.group" text="_Arma Plugin" description="Arma Plugin Menu">
+		<group id="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.group" text="_Arma Plugin" description="Arma Plugin Menu" class="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.ArmaPluginGroup">
 			<add-to-group group-id="MainMenu" anchor="last" />
-			<!--<action id="a3plugin.action.mm.pluginProps" class="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.Action_PluginProperties" text="Plugin Properties" description="Configure Arma Plugin Properties" />-->
+			<action id="a3plugin.action.mm.pluginProps" class="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.Action_PluginProperties" text="Plugin Properties" description="Configure Arma Plugin Properties" />
 			<action id="a3plugin.action.mm.wiki_scripting" class="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.Action_ShowScriptingWiki" text="Arma 3 Wiki for Scripting Commands" description="View the Wiki page for Arma 3 scripting commands" />
 			<action id="a3plugin.action.mm.wiki_home" class="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.Action_ShowWikiHomepage" text="Arma 3 Wiki Homepage" description="View the Wiki home page for Arma 3" />
 			<action id="a3plugin.action.mm.color_picker" class="com.kaylerrenslow.a3plugin.dialog.actions.mainMenu.Action_ShowArmaColorPicker" text="Arma Color Picker" description="Arma Color Picker" />
