@@ -3,7 +3,9 @@ package com.kaylerrenslow.a3plugin.dialog.actions.newGroup;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.actionSystem.CommonDataKeys;
+import com.intellij.openapi.actionSystem.DataKeys;
 import com.intellij.openapi.command.WriteCommandAction;
+import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.vfs.VirtualFile;
@@ -11,6 +13,9 @@ import com.kaylerrenslow.a3plugin.Plugin;
 import com.kaylerrenslow.a3plugin.dialog.Dialog_NewSQFFile;
 import com.kaylerrenslow.a3plugin.dialog.SimpleMessageDialog;
 import com.kaylerrenslow.a3plugin.dialog.actions.SimpleGuiAction;
+import com.kaylerrenslow.a3plugin.lang.header.exception.DescriptionExtNotDefinedException;
+import com.kaylerrenslow.a3plugin.project.ArmaProjectDataManager;
+import com.kaylerrenslow.a3plugin.util.PluginUtil;
 
 import java.io.IOException;
 
@@ -28,15 +33,20 @@ public class Action_NewSQFFile extends AnAction {
 
 	@Override
 	public void update(AnActionEvent e) {
-		boolean disable = false;
-		if(e.getProject() == null){
-			disable = true;
-		}
+		boolean enable = e.getProject() == null;
 		VirtualFile directory = e.getData(CommonDataKeys.VIRTUAL_FILE);
-		if(directory == null){
-			disable = true;
+		enable = enable || directory != null;
+
+		Module module = e.getData(DataKeys.MODULE);
+		enable = enable || PluginUtil.moduleIsArmaType(module);
+		if(enable){
+			try {
+				ArmaProjectDataManager.getInstance().getDataForModule(module).getRootMissionDirectory();
+			} catch (DescriptionExtNotDefinedException e1) {
+				enable = false;
+			}
 		}
-		e.getPresentation().setVisible(!disable);
+		e.getPresentation().setVisible(enable);
 	}
 
 	private class CreateNewSQFFile implements SimpleGuiAction<Pair<String, VirtualFile>> {
