@@ -3,7 +3,9 @@ package com.kaylerrenslow.a3plugin.lang.sqf.providers;
 import com.intellij.lang.refactoring.RefactoringSupportProvider;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiNamedElement;
+import com.kaylerrenslow.a3plugin.dialog.SimpleMessageDialog;
 import com.kaylerrenslow.a3plugin.lang.header.exception.GenericConfigException;
+import com.kaylerrenslow.a3plugin.lang.header.psi.HeaderConfigFunction;
 import com.kaylerrenslow.a3plugin.lang.header.psi.HeaderPsiUtil;
 import com.kaylerrenslow.a3plugin.lang.sqf.SQFStatic;
 import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFVariable;
@@ -24,16 +26,15 @@ public class SQFRefactoringSupportProvider extends RefactoringSupportProvider{
 		}
 		if(element instanceof SQFVariable){
 			SQFVariable variable = (SQFVariable)element;
-			if(SQFStatic.isBisFunction(variable.getVarName())){
-				return true;
-			}
-			try{
-				HeaderPsiUtil.getFunctionFromCfgFunctions(element.getContainingFile(),variable.getVarName());
-				return false;
-			}catch (GenericConfigException e){
-
+			if(SQFStatic.followsSQFFunctionNameRules(variable.getVarName())){
+				try{
+					HeaderConfigFunction function = HeaderPsiUtil.getFunctionFromCfgFunctions(element.getContainingFile(),variable.getVarName());
+					return function != null;
+				}catch (GenericConfigException e){
+					return false;
+				}
 			}
 		}
-		return false;
+		return true;
 	}
 }
